--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "dotenv": "^16.4.5",
     "eslint-plugin-node": "^11.1.0",
     "express": "^4.19.2",
+    "generate-password": "^1.7.1",
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
+    "nodemailer": "^6.9.14",
     "uniqid": "^5.4.0",
     "zod": "^3.23.8"
   },
