--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "generate-password": "^1.7.1",
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.5.1",
     "nodemailer": "^6.9.14",
     "uniqid": "^5.4.0",
