--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Copy backend code to runner
+        run: |
+          cp -r /home/ubuntu/actions-runner-node/_work/SL-IL-platform-backend/SL-IL-platform-backend/* /home/ubuntu/actions-runner-node/
+
       - name: Build and deploy the backend
         run: |
-          cd /home/ubuntu/actions-runner-node/_work/SL-IL-platform-backend/SL-IL-platform-backend
-          docker-compose down
-          docker-compose up -d --build backend
+          cd /home/ubuntu/actions-runner-node
+          docker-compose up -d --build backend  # Only rebuild and restart the backend, MongoDB is unaffected
