--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,12 +17,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Copy backend code, including hidden files, to the runner
+      - name: Copy backend code (excluding .git) to the runner
         run: |
           shopt -s dotglob  # Enable copying of hidden files like .env
-          cp -r /home/ubuntu/actions-runner-node/_work/SL-IL-platform-backend/SL-IL-platform-backend/* /home/ubuntu/actions-runner-node/
+          rsync -av --exclude='.git' --exclude='node_modules' /home/ubuntu/actions-runner-node/_work/SL-IL-platform-backend/SL-IL-platform-backend/* /home/ubuntu/actions-runner-node/
 
       - name: Build and deploy the backend
         run: |
           cd /home/ubuntu/actions-runner-node
-          docker-compose up -d --build backend  # Only rebuild and restart the backend, MongoDB is unaffected done
+          docker-compose up -d --build backend  # Only rebuild and restart the backend, MongoDB is unaffected
