--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^8.5.1",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.9",
+    "serverless-http": "^3.2.0",
     "uniqid": "^5.4.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
